<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_update"
        android:icon="@drawable/ic_search_update"
        android:title="@string/title_update" />

    <item
        android:id="@+id/navigation_devices"
        android:icon="@drawable/ic_devices"
        android:title="@string/title_devices" />

    <item
        android:id="@+id/navigation_ota_tools"
        android:icon="@drawable/ic_tools"
        android:title="@string/title_ota_tools" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_about"
        android:title="@string/title_about" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />

</menu>
